Added some CSS.

--- a/quotesaver/app/assets/stylesheets/application.css
+++ b/quotesaver/app/assets/stylesheets/application.css
@@ -1,13 +1,49 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
+html, body {
+    margin:0;
+    padding:0;
+    height:100%; 
+ } 
+}
+.body-container {
+	  float: right;
+
+	
+}
+
+.title-bar {
+	  margin-right: none;
+	  margin-left: none;
+	  background-color: black;
+      border-radius:2px;
+   
+}
+
+.brand {
+	font-family: 'Fredericka the Great', cursive;
+	font-size: 200%;
+}
+
+
+a {
+	text-decoration: none;
+	line-height: 40px;
+
+}
+
+ul li {
+	display: inline-block;
+	padding: 0 0 0 20px;
+	
+}
+
+.title-bar ul li a {
+	color: #A0A0A0;
+	display: inline;
+	
+}
+
+.title-bar ul li a:hover {
+	color: #FFFFFF;
+	display: inline;
+	
+}
